tests/build/fail/widget_new/property_already_set1.rs
use zero_ui::properties::margin;
use zero_ui::widgets::blank;

fn main() {
    let _ = blank! {
        margin = 0;
        margin = 0;
    };
}
