tests/build/fail/widget_new/property_already_set1.stderr
error: property `margin` already set
 --> $DIR/property_already_set1.rs:7:9
  |
7 |         margin = 0;
  |         ^^^^^^
